Closed Bug 1906998 Opened 1 year ago Closed 1 year ago

genUnicodePropertyData.pl refers wrong VerticalOrientation list

Categories

(Core :: Internationalization, defect)

defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox133 --- fixed

People

(Reporter: t.matsuu, Assigned: m_kato)

References

Details

Attachments

(2 files)

Or replace it with the function implemented in harfbuzz.

The severity field is not set for this bug.
:m_kato, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(m_kato)
Severity: -- → S3
Flags: needinfo?(m_kato)

ICU4X doesn't support this properties yet. I will add it for next release.

Our ICU's system requirement is 73.1 or higher, so we can use ICU API to
get vertical orientation properties.

Assignee: nobody → m_kato
Status: NEW → ASSIGNED

The vertical orientation data is unnecessary now, so let's remove it.

Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/fa72f865d20c Part 1. Use ICU4C to get vertical orientation properties. r=jfkthame https://hg.mozilla.org/integration/autoland/rev/e5a497706356 Part 2. Re-build unicode data without vertical orientation. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
See Also: → 1906308
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: