Bug 1906998 - Part 1. Use ICU4C to get vertical orientation properties. r=jfkthame

Our ICU's system requirement is 73.1 or higher, so we can use ICU API to
get vertical orientation properties.

Differential Revision: https://phabricator.services.mozilla.com/D223672